--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -71,18 +71,8 @@
             <ng-container *ngIf="!devToolsOpen && ASICModel == eASICModel.BM1397">
 
                 <div class="form-group">
-                    <label>Max Frequency </label>
-                    <select formControlName="maxFrequency">
-                        <option value="400">400</option>
-                        <option value="425">425 (default)</option>
-                        <option value="450">450</option>
-                        <option value="475">475</option>
-                        <option value="485">485</option>
-                        <option value="500">500</option>
-                        <option value="525">525</option>
-                        <option value="550">550</option>
-                        <option value="575">575</option>
-                    </select>
+                    <label>Max Frequency:</label>
+                    <input formControlName="maxFrequency" type="number">
                 </div>
 
                 <div class="form-group">
