Add PCB Revision to AxeOs

--- a/main/http_server/axe-os/src/app/components/home/home.component.html
+++ b/main/http_server/axe-os/src/app/components/home/home.component.html
@@ -17,6 +17,10 @@
                         <td>{{info.ASICModel}}</td>
                     </tr>
                     <tr>
+                        <td>PCB Rev:</td>
+                        <td>{{info.PCB_Rev}}</td>
+                    </tr>
+                    <tr>
                         <td>Uptime:</td>
                         <td>{{info.uptimeSeconds | dateAgo}}</td>
                     </tr>
