Add session ID in the AxeOs

--- a/main/http_server/axe-os/src/app/components/home/home.component.html
+++ b/main/http_server/axe-os/src/app/components/home/home.component.html
@@ -61,6 +61,10 @@
                         <td>Shares Rejected:</td>
                         <td>{{info.sharesRejected}}</td>
                     </tr>
+                    <tr>
+                        <td>Session ID:</td>
+                        <td>{{info.SessionID}}</td>
+                    </tr>
                 </table>
             </div>
         </div>
