Adjust vcore without restarting the device

--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -76,14 +76,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Core Voltage </label>
-                    <select formControlName="coreVoltage">
-                        <option value="1300">1300</option>
-                        <option value="1350">1350</option>
-                        <option value="1400">1400 (default)</option>
-                        <option value="1450">1450</option>
-                        <option value="1500">1500</option>
-                    </select>
+                    <label>Core Voltage:</label>
+                    <input formControlName="coreVoltage" type="number">
                 </div>
             </ng-container>
 
